resources/yaml/spark.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  ports:
    - name: web-ui
      port: 8080
      targetPort: 8080
    - name: master
      port: 7077
      targetPort: 7077
  selector:
    app: spark-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
spec:
  selector:
    matchLabels:
      app: spark-master
  replicas: 1
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image: 013596862746.dkr.ecr.ap-northeast-2.amazonaws.com/ml-on-eks/spark:v4 # apache/spark:3.5.5
        command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master"]
        ports:
        - containerPort: 7077
          name: master
        - containerPort: 8080
          name: web-ui
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
