resources/yaml/mlflow-ing.yaml
# user/dRgxazTbSF
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: $ACM_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-port: '5000'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: mlops-ingress-class
  rules:
    - host: "mlflow.cjhyun.people.aws.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-tracking
                port:
                  number: 80
